--- a/.github/workflows/sync-tflm.yml
+++ b/.github/workflows/sync-tflm.yml
@@ -65,3 +65,11 @@ jobs:
           title: (CFU Playground) Automated sync from github.com/tensorflow/tflite-micro
           commit-message: Automated sync from github.com/tensorflow/tflite-micro
           body: "(CFU Playground) Automated sync from github.com/tensorflow/tflite-micro"
+
+      - name: Enable automerge
+        if: steps.create-pr.outputs.pull-request-operation == 'created'
+        uses: peter-evans/enable-pull-request-automerge@v1
+        with:
+          token: ${{ secrets.CFU_BOT_TOKEN }}
+          merge-method: rebase
+          pull-request-number: ${{ steps.create-pr.outputs.pull-request-number }}
